<resources>
    <string name="app_name">makautSB Admin</string>
    <string name="choose_branch">Choose Branch</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="choose_file">Choose File</string>
    <string name="subject_name">Subject name</string>
    <string name="semester">Semester</string>

    <string name="no_requests_found">No Requests found</string>
    <string name="there_are_no_records_nto_display_right_now">There are no records\nto display right now.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>